# noise.aseprite-extension

./: .gitattributes  .gitignore  .gitmodules  .luarc.json  CMakeLists.txt  Makefile  README.md  TODO.md  create-dev-links-LINUX.sh  create-dev-links-WIN.sh  lattice.lua  noise-keys.aseprite-keys  noise-plugin.lua  noise.aseprite-extension  noise.lua  package.json  package.sh  perlin.lua  utils.lua  voronoi-ui.lua  voronoi.lua  worley-ui.lua  worley.lua
.github/workflows/: build.yml
cmake/: SubDirList.cmake
examples/: perlin.aseprite  voronoi-shortened.aseprite  voronoi.aseprite  worley.aseprite
include/: common.h  ibuffer.h  isort.h  larray.h  lattice3.h  macro_utils.h  math_utils.h  noise.h  smaa.h  utils.h  vec.h  vector3.h  worley.h
include/SMAA/: areatex.h  searchtex.h
scripts/: convolution.lua  dots.lua  gradient.lua  ibuffer.lua  noise.lua  perlin-ui.lua  perlin.lua  sprite-painter-plain.lua  sprite-painter.lua  utils.lua  voronoi-ui.lua  voronoi.lua  worley-ui.lua  worley.lua
scripts/aa/: aa-ui.lua  gaussian-ui.lua  gaussian.lua  init.lua  smaa-ui.lua  smaa.lua
scripts/utils/: init.lua  utils-aseprite.lua  utils-misc.lua
src/: CMakeLists.txt  isort.cc  larray.cc  lattice3.cc  math_utils.cc  noise.cc  smaa.cc  utils.cc  worley.cc
src/SMAA/: areatex.cc  searchtex.cc
tests/: CMakeLists.txt  main.cc
tests/ctests/: CMakeLists.txt
tests/ctests/src/: BufferTests.cc  VectorTests.cc
tests/scripts/: error.lua  test_larray1.lua  test_perlin1.lua  test_print_params.lua  test_voronoi1.lua  test_worley1.lua  test_worley2.lua
tests/scripts/native/: loadable.lua  tester.lua
